Fixed icon alignment

--- a/src/modules/core/styles/style.css
+++ b/src/modules/core/styles/style.css
@@ -4978,7 +4978,7 @@ ul[rn-carousel-buffered] > li {
     font-size: 18px;
     display: inline-block;
     position: relative;
-    top: 3px;
+    top: -13px;
     margin-left: 5px;
 }
 
@@ -4990,7 +4990,8 @@ ul[rn-carousel-buffered] > li {
 .yakaHeaderAvatarDropdown {
     top: -6px;
     height: 50px;
-    padding-top: 3px;
+    padding-top: 5px;
+    padding-left: 5px;
 }
 
 @media (max-width: 767px) {
